[DOCS] Make sure the :hover and :focus styles are visible for certain elements by default in the living styleguide

--- a/Resources/Private/Sass/Base/_Links.scss
+++ b/Resources/Private/Sass/Base/_Links.scss
@@ -11,7 +11,9 @@ Styleguide 2.7
 Standard anchors
 
 Markup:
-<a href="#">I am an anchor element.</a>
+<a href="#" class="{$modifiers}">I am an anchor element.</a>
+
+:hover   - Hover styling for anchor elements.
 
 Styleguide 2.7.1
 */
